tests/unit/language/errors/assert_fail.arche
// RUN: %arche build -o %t %s && %t; test $? -eq 1
#import { fmt }
main :: proc() {
  fmt.printf("before\n");
  fmt.assert(0, "assertion failed\n");
  fmt.printf("after\n");
}
